--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
                 
                 <div class="participants-list">
                     <div class="participant">
+                        <img src="https://randomuser.me/api/portraits/men/31.jpg" alt="来宾">
+                        <span>W77</span>
+                    </div>
+                    <div class="participant">
                         <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="来宾">
                         <span>张三</span>
                     </div>
@@ -373,6 +377,7 @@
     <script>
         // 模拟参与者数据
         const participants = [
+            { name: "W77", avatar: "https://randomuser.me/api/portraits/men/31.jpg" },
             { name: "张三", avatar: "https://randomuser.me/api/portraits/men/32.jpg" },
             { name: "李四", avatar: "https://randomuser.me/api/portraits/women/44.jpg" },
             { name: "王五", avatar: "https://randomuser.me/api/portraits/men/22.jpg" },
@@ -519,3 +524,4 @@
     </script>
 </body>
 </html>
+
