--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <!-- 抽奖控制页面 -->
     <div id="lotteryPage" class="container">
         <header>
-            <h1>张先生 & 李小姐的婚礼抽奖</h1>
+            <h1>胡先生 & 王小姐的婚礼抽奖</h1>
             <p class="subtitle">感谢各位来宾的光临，祝您中奖！</p>
         </header>
         
@@ -485,7 +485,7 @@
         </div>
         
         <footer>
-            <p>© 2023 幸福婚礼策划 - 抽奖系统 | <span id="currentTime"></span></p>
+            <p>© 2025 幸福婚礼策划 - 抽奖系统 | <span id="currentTime"></span></p>
         </footer>
     </div>
 
@@ -838,3 +838,4 @@
     </script>
 </body>
 </html>
+
