--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -1206,7 +1206,7 @@
                 // 1. 清空内存中的中奖记录
                 winnersRecord = [];
                 
-                // 2. 重置轮次为0
+                // 2. 重置轮次为1
                 currentRound = 0;
                 
                 // 3. 重置奖品状态，使其可再次抽取
@@ -1272,4 +1272,5 @@
     </script>
 </body>
 </html>
+
 
