--- a/index.html
+++ b/index.html
@@ -951,10 +951,11 @@
         // 生成二维码
         function generateQRCode() {
             // 获取当前页面基础URL
-            let baseUrl = window.location.href.split('?')[0];
+            //let baseUrl = window.location.href.split('?')[0];
             
             // 构建注册页面URL
-            const registrationUrl = baseUrl + '?page=register';
+            //const registrationUrl = baseUrl + '?page=register';
+            const registrationUrl = 'https://docs.qq.com/form/page/DUURpUWdpdnR1YUVN';
             
             // 显示注册链接
             registerUrlElement.textContent = registrationUrl;
